<resources>
    <string name="app_name">CatchU</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="facebook_app_id">1429718627133451</string>
    <string name="fb_login_protocol_scheme">fb1429718627133451</string>
    <string name="exitItem">Log Out</string>
    <string name="search">Search</string>
    <string name="upperFriend">FRIEND</string>
    <string name="upperRequested">REQUESTED</string>
    <string name="upperAddFriend">ADD FRIEND</string>
    <string name="friends">FRIENDS</string>
    <string name="groups">GROUPS</string>
    <string name="FACEBOOK">FACEBOOK</string>
    <string name="CONTACTS">CONTACTS</string>
    <string name="error">Error:</string>
    <string name="errorUpper">ERROR</string>
    <string name="info">Info:</string>
    <string name="addNewGroup">New Group</string>
    <string name="addPersonToGroup">Add Friend to Group</string>
    <string name="selectLeastOneFriend">You must choose at least 1 person!</string>
    <string name="selectLeastOneGroup">You must choose at least 1 group!</string>
    <string name="addFriendFirst">To create a group, you must have at least one follower!</string>
    <string name="addGroupName">Add group name</string>
    <string name="pleaseWriteGroupName">The group name cannot be empty!</string>
    <string name="deviceHasNoCamera">Device has no camera!</string>
    <string name="groupIsCreating">Group is composing...</string>
    <string name="writeGroupName">Write group name...</string>
    <string name="defineGroupNameAndIcon">Specify group name and icon</string>
    <string name="participant"> participants</string>
    <string name="constantItem">item</string>
    <string name="adminText">  Administrator  </string>
    <string name="technicalError">Technical Error!</string>
    <string name="selectPicture">Select Picture</string>
    <string name="SELECT_VIDEO">Select Video</string>
    <string name="openCamera">Open Camera</string>
    <string name="openGallery">Open Gallery</string>
    <string name="REMOVE_PHOTO">Remove photo</string>
    <string name="REMOVE_VIDEO">Remove video</string>
    <string name="EDIT">Edit</string>
    <string name="PLAY">Play</string>
    <string name="chooseProfilePhoto">Choose a profile photo</string>
    <string name="CHOOSE_GROUP_PHOTO">Choose a group photo</string>
    <string name="groupInformation">Group Information</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="exitFromGroup">Exit From Group</string>
    <string name="areYouSureExitFromGroup">Are you sure you want to leave the group?</string>
    <string name="upperYes">YES</string>
    <string name="upperNo">NO</string>
    <string name="lowerYes">Yes</string>
    <string name="lowerNo">No</string>
    <string name="youText">You</string>
    <string name="removeFromGroup">  Remove from the group</string>
    <string name="viewTheProfile">  View the profile</string>
    <string name="createdAt">Created at:</string>
    <string name="changeAsAdmin">Make Group Admin</string>
    <string name="friendsAdding">Participants adding...</string>
    <string name="giveCameraPermission">You have to give permission to use the camera</string>
    <string name="pleaseAddShareItem">You must add video, picture or text to share!</string>
    <string name="selectGroup">Select Group</string>
    <string name="selectAll">Select All</string>
    <string name="share">Share</string>
    <string name="locationIsEmpty">Location information is required to share</string>
    <string name="shareIsProcessing">Sharing...</string>
    <string name="videoDurationWarning">Maximum duration for video :</string>
    <string name="secondShort">sec</string>
    <string name="secondLong">second(s)</string>
    <string name="photoSelectTypeUnknown">Photo Select Type is Unknown!</string>
    <string name="videoSelectTypeUnknown">Video Select Type is Unknown!</string>
    <string name="profileUpdating">Profile updating...</string>
    <string name="profileUpdateSuccessful">Profile Update is Successful</string>
    <string name="dragForDelete">Drag for Delete</string>
    <string name="finish">Finish</string>
    <string name="USE">Use</string>
    <string name="detail">Detail</string>
    <string name="searchGroup">Search Group</string>
    <string name="typeToAddText">Say something...</string>
    <string name="UPDATING">Updating...</string>
    <string name="EXPLORE_PEOPLE">Explore People</string>
    <string name="VIEW_PENDING_REQUEST">View Pending Requests</string>
    <string name="THERE_IS_NO_GROUP_CREATE_OR_INCLUDE">There is no group you created or included</string>
    <string name="THERE_IS_NO_FACEFRIEND_WHO_USING_CATCHU">There is no Facebook friend who using CatchU</string>
    <string name="THERE_IS_NO_CONTACTFRIEND_WHO_USING_CATCHU">There is no Contact friend who using CatchU</string>
    <string name="PHONE_NUM">Phone Number</string>
    <string name="SELECT_COUNTRY">Select Country</string>
    <string name="COUNTRY_NAME">Country Name</string>
    <string name="COUNTRY_NAME_OR_CODE">Country Name or Code</string>
    <string name="WRITE_PHONE_NUMBER">Write phone number</string>
    <string name="PLEASE_WRITE_VERIFICATION_CODE">Enter the 6 digit confirmation code that we send this number : </string>
    <string name="SEND_VERIFICATION_CODE_AGAIN">Send Code Again</string>
    <string name="CHANGE_PHONE_NUMBER">Change Phone Number</string>
    <string name="INVALID_VERIFICATION_CODE_ENTERED">Invalid verification code entered</string>
    <string name="VERIFY">Verify</string>
    <string name="REMAINING_TIME">Remaining Time : </string>
    <string name="NOT_ENTERED_VERIFY_CODE_IN_TIME">You did not enter the code within the given time. Please send the code again!</string>
    <string name="UPDATE_IS_SUCCESSFUL">Update is Successful</string>
    <string name="THERE_IS_NO_SEARCH_RESULT">No results found.</string>
    <string name="USERS_OF_APPLICATION">Users of the application</string>
    <string name="DEFAULT_POST_ERROR_MESSAGE">There was an error during the sharing, would you like to try again?</string>
    <string name="GROUP_SETTINGS">Group Settings</string>
    <string name="CHOOSE_PHOTO">Choose Photo</string>
    <string name="TAKE_SCREENSHOT">Take screenshot</string>
    <string name="CIRCLE_THE_PROBLEM">Take the problem round</string>
    <string name="SCREENSHOT">Take</string>
    <string name="searchUser">Search user...</string>
    <string name="IN_GROUP">In Group</string>
    <string name="REMOVE">Remove</string>
    <string name="REMOVE_FOLLOWER_TITLE">Remove Follower?</string>
    <string name="REMOVE_FOLLOWER_MESSAGE">The information that you removed from the followers will not be forwarded to this user</string>
    <string name="SEARCH_FOLLOWERS">Search followers...</string>
    <string name="SEARCH_FOLLOWINGS">Search followings...</string>
    <string name="USER_NOT_FOUND">User not found.</string>
    <string name="REMOVE_BLOCK_PERSON">You need to unblock to be able to chat with this person!</string>
    <string name="TO_BE_REMOVED_BLOCK_PERSON">You must be unblocked to communicate with this person!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="addGroup">New Group</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="giveNewName">Write New Name</string>
    <string name="groupPhotoChanging">Photo is changing...</string>
    <string name="title_activity_maps">Map</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="sure_exit_not_saving_image">Are you want to exit without saving image?</string>
    <string name="image_saved_successfully">Image Saved Successfully</string>
    <string name="failed_to_save_image">Failed to save Image</string>
    <string name="an_error_during_process">An error occurred during the process</string>
    <string name="rateus">Rate Us</string>
    <string name="commentFailed">Install an application market</string>
    <string name="gpsSettings">GPS Settings</string>
    <string name="gpsSettingMessage">GPS is not enabled. Click on setting to enable and get location, please start app again after turning on GPS.</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="text">Text</string>
    <string name="publicShareText">Public</string>
    <string name="friendsShareText">Special</string>
    <string name="groupsShareText">Groups</string>
    <string name="justMeShareText">Just Me</string>
    <string name="allFollowersShareText">All Followers</string>
    <string name="PUBLIC_SHARE_DESC">You share everyone</string>
    <string name="ALL_FOLLOWERS_SHARE_DESC">You share all followers</string>
    <string name="JUSTME_SHARE_DESC">You share just yourself</string>
    <string name="signOut">Sign Out</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="invite">Invite</string>
    <string name="request_sended">Request sent</string>
    <string name="ACCEPT_REQUEST">Accept Request</string>
    <string name="cancel_following">Remove from followings?</string>
    <string name="ASKING_STOP_FOLLOWING">Are you sure you want to stop following?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="feed">Feeds</string>
    <string name="PENDING_REQUESTS">Pending Requests</string>
    <string name="THERE_IS_NO_PENDING_REQUEST">There is no pending request</string>
    <string name="CONTACT_INVITE_MESSAGE">Do you want to share in CatchU and follow your friends? You can download the application from this link:</string>
    <string name="CONNECT_FACEBOOK">Connect Facebook</string>
    <string name="INVITE_YOUR_FRIENDS">Invite Your Friends</string>
    <string name="ADD_YOUR_FRIENDS">Add Your Friends</string>
    <string name="FACEBOOK_FRIENDS">Facebook Friends</string>
    <string name="ACCOUNT">Account</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="SUPPORT">Support</string>
    <string name="HELP_CENTER">About App</string>
    <string name="REPORT_PROBLEM">Report a Problem</string>
    <string name="CONTACT_FRIENDS">Contact Friends</string>
    <string name="PRIVATE_ACCOUNT">Private Account</string>
    <string name="VERSION">Version</string>
    <string name="ABOUT_APP">CatchU: If you have any questions
        or suggestions about the application, please write to us.
    </string>
    <string name="authoremail">catchuren@gmail.com</string>
    <string name="CURRENT_PASSWORD">Current password</string>
    <string name="NEW_PASSWORD">New password</string>
    <string name="NEW_PASSWORD_AGAIN">New password, again</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="register">Register</string>
    <string name="sendLink">Send Link</string>
    <string name="forgetPassText">We will send a link to your mail address. You can renew your password.</string>
    <string name="FIND_FACEBOOK_FRIENDS">Find Facebook Friends</string>
    <string name="YOU_CAN_FIND_FACEBOOK_FRIENDS">You can find facebook friends who are using Catchu</string>
    <string name="FORGOT_YOUR_PASSWORD">Forgot Your Password?</string>
    <string name="unfollow">Unfollow</string>
    <string name="disableComment">Disable comment</string>
    <string name="report">Report...</string>
</resources>