<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/btnCopyShareUrl"
        style="@style/ContextMenuButton"
        android:text="@string/unfollow" />

    <Button
        android:id="@+id/btnSharePhoto"
        style="@style/ContextMenuButton"
        android:text="@string/disableComment" />

    <Button
        android:id="@+id/btnReport"
        style="@style/ContextMenuButton"
        android:text="@string/report"
        android:textColor="@color/btn_context_menu_text_red" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/ContextMenuButton"
        android:text="@string/cancel" />

</merge>