<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/searchItem"
            android:checkable="true"
            android:icon="@drawable/tab_search"
            android:title="@string/EXPLORE_PEOPLE" />

        <item
            android:id="@+id/viewItem"
            android:checkable="true"
            android:icon="@drawable/view"
            android:title="@string/VIEW_PENDING_REQUEST"
            app:actionLayout="@layout/navmenu_action_layout" />

        <item
            android:id="@+id/manageGroupsItem"
            android:checkable="true"
            android:icon="@drawable/groups_icon_500"
            android:title="@string/GROUP_SETTINGS" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settingsItem"
            android:checkable="true"
            android:icon="@mipmap/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/reportProblemItem"
            android:checkable="true"
            android:icon="@mipmap/icon_report_problem"
            android:title="@string/REPORT_PROBLEM" />
    </group>

</menu>