<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uren.catchu.LoginPackage.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:textColor="@color/White"
            android:textSize="45sp" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:alpha="10"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:theme="@style/EditTextTheme">

            <!--  Username Label -->
            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/user"
                android:drawablePadding="20dp"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White" />


            <!--  Email Label -->
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/mail"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:drawableLeft="@mipmap/key"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/createAccount"
                android:textColor="@color/White" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
