<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DodgerBlue"
    tools:context="com.uren.catchu.LoginPackage.ForgetPasswordActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:alpha="10"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dip"
        android:theme="@style/EditTextTheme">

        <ImageView
            android:id="@+id/lockImgv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            android:src="@mipmap/icon_forget_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/FORGOT_YOUR_PASSWORD"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/White"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/forgetPassText"
            android:textSize="17sp"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/mail"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Silver" />


        <Button
            android:id="@+id/btnSendLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/sendLink"
            android:textColor="@color/White" />

    </LinearLayout>

</RelativeLayout>
