<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/searchResultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/THERE_IS_NO_SEARCH_RESULT"
        android:textColor="@color/DodgerBlue"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <include layout="@layout/common_toolbar_layout_rounded" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/searchToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <include layout="@layout/toolbar_layout_rounded" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/specialRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <include layout="@layout/warning_message_tv" />

    <include layout="@layout/layout_progress_bar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/connectFacebookLayout"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@mipmap/icon_facebook"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/FIND_FACEBOOK_FRIENDS"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/Black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/YOU_CAN_FIND_FACEBOOK_FRIENDS" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/connectFacebookButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/CONNECT_FACEBOOK"
                android:textColor="@color/White"
                android:textSize="12sp" />

        </RelativeLayout>

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/facebookLoginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            facebook:com_facebook_login_text="Log in with Facebook"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>