<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

    <include layout="@layout/common_toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="130dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <EditText
                android:id="@+id/currPasswordEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CURRENT_PASSWORD"
                android:inputType="textPassword"
                android:textColor="#0A0B12"
                android:textSize="13sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <EditText
                android:id="@+id/newPasswordEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NEW_PASSWORD"
                android:inputType="textPassword"
                android:textColor="#0A0B12"
                android:textSize="13sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <EditText
                android:id="@+id/validatePassEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NEW_PASSWORD_AGAIN"
                android:inputType="textPassword"
                android:textColor="#0A0B12"
                android:textSize="13sp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>
