<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:orientation="vertical"
        android:id="@+id/mainLinearLayout">

        <EditText
            android:id="@+id/verifyCodeEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:background="@null"
            android:hint="# # # # # #"
            android:textSize="25sp"
            android:maxLength="6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.1"
                android:background="@android:color/black" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/PLEASE_WRITE_VERIFICATION_CODE"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/Black"
            android:textSize="15sp"
            android:text="234234234234"
            android:id="@+id/phoneNumberTv"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendCodeAgainBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SEND_VERIFICATION_CODE_AGAIN"
                android:textSize="10sp"
                android:textAllCaps="false"/>

            <View
                android:layout_width="10dp"
                android:layout_height="0dp"></View>

            <Button
                android:id="@+id/changePhoneBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CHANGE_PHONE_NUMBER"
                android:textSize="10sp"
                android:textAllCaps="false"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>